# codereviewer

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: review.yml
src/codereviewer/: __main__.py  diffs.py  github_client.py  models.py  prompts.py  reviewer.py  summarizer.py
tests/: test_quality.py  test_reviewers.py
tests/test_data/: buggy_diff.txt  simple_diff.txt
